Fixed cropping

--- a/pseudobackend/imgedit/style.css
+++ b/pseudobackend/imgedit/style.css
@@ -50,6 +50,10 @@ canvas {
     -webkit-transform: translateX(-50%);
 }
 
+#tools {
+    z-index: 1;
+}
+
 .tool {
     margin: 10px;
     padding: auto;
